objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Changed_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date/Time field for storing the last time the Contact’s primary Account was updated; will be set by trigger; not added to page layouts</description>
        <label>Account Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Denied_On_Watch_List__c</fullName>
        <formula>Account.Denied_Prohibited_Account__c</formula>
        <label>Account Denied/On Watch List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Export_Prohibited__c</fullName>
        <formula>Account.Export_Prohibited__c</formula>
        <label>Account Export Prohibited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Latin__c</fullName>
        <formula>Account.Account_Name_Latin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (Latin)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Site__c</fullName>
        <formula>Account.Site</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Warnings__c</fullName>
        <formula>Account.Account_Warning_Icon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Warnings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Changed_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date/Time field for storing the last time an element of the address was updated; will be set by trigger; not added to page layouts</description>
        <label>Address Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Advisory_Board__c</fullName>
        <description>Include in data migration and integration but not display on UI in phase 1.</description>
        <label>Advisory Board</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AERODEF (MALC)</fullName>
                </value>
                <value>
                    <fullName>AUTO (MAAB)</fullName>
                </value>
                <value>
                    <fullName>Comp Bio</fullName>
                </value>
                <value>
                    <fullName>Communications and Electronics</fullName>
                </value>
                <value>
                    <fullName>Distributed Computing</fullName>
                </value>
                <value>
                    <fullName>EMAB</fullName>
                </value>
                <value>
                    <fullName>Executive Contact</fullName>
                </value>
                <value>
                    <fullName>FINSVCS</fullName>
                </value>
                <value>
                    <fullName>JP MAB</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas MAB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authentication_Status__c</fullName>
        <label>Authentication Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not a student</fullName>
                </value>
                <value>
                    <fullName>Unable to verify</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Not received yet</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Program_End__c</fullName>
        <description>Captures the end date of the book program relationship</description>
        <inlineHelpText>Captures the end date of the book program relationship</inlineHelpText>
        <label>Book Program End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Program_Start__c</fullName>
        <description>Captures the start date of the book program relationship</description>
        <inlineHelpText>Captures the start date of the book program relationship</inlineHelpText>
        <label>Book Program Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Book_Program_Status__c</fullName>
        <description>Used to capture if a contact is part of the book program and their status within it.  Used as criteria to incorporate into the publisher directory.</description>
        <inlineHelpText>New indicates if they have not been introduced to the program but should.  Active indicated they have been introduced and have provided consent to share their contact information publicly.</inlineHelpText>
        <label>Book Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDS_Contact_Id__c</fullName>
        <description>The ID of the Contact in CDS database and will be used for integration</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the Contact in CDS</inlineHelpText>
        <label>CDS Contact Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City_Latin__c</fullName>
        <label>City (Latin)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <description>Power of 1 field to be used on reports for uniquely counting contacts on summary and matrix reports where Contact may be duplicated in the results. (ie: Report on Enrollments but want to see how many unique Contacts the Enrollments relate to.)</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>No Longer at Account</fullName>
                </value>
                <value>
                    <fullName>Junk</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_URL__c</fullName>
        <description>Include in data migration but not display on UI for phase 1 release</description>
        <label>Contact URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Warning__c</fullName>
        <formula>CASE(Contact_Warnings__c,
&quot;&quot;, &quot;&quot;,IMAGE ( &quot;/img/msg_icons/warning32.png&quot;, &quot;True Image&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Warnings__c</fullName>
        <label>Contact Warnings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Hold</fullName>
                </value>
                <value>
                    <fullName>Suspicious - License Use</fullName>
                </value>
                <value>
                    <fullName>Suspicious - Business Practice</fullName>
                </value>
                <value>
                    <fullName>Restricted - License Use</fullName>
                </value>
                <value>
                    <fullName>Restricted - Trials &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Restricted - Legal</fullName>
                </value>
                <value>
                    <fullName>Export Compliance Concern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_State_Code__c</fullName>
        <description>Concatenated State &amp; Country Codes - used by CDS integration for matching.</description>
        <formula>IF(OR (TEXT(MailingCountryCode) =&apos;US&apos;, TEXT(MailingCountryCode)=&apos;CA&apos;),TEXT(MailingStateCode),
IF(ISBLANK(MailingState),&apos;&apos;,TEXT(MailingCountryCode)&amp;&apos;-&apos;&amp; TEXT(MailingStateCode)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Local__c</fullName>
        <label>County (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_On_Watch_List__c</fullName>
        <formula>IF ( Denied_On_Watch_List_checkbox__c = TRUE, 
IMAGE ( &quot;/img/msg_icons/error32.png&quot;, &quot;True Image&quot; ), &quot;&quot;
)</formula>
        <label>Denied/On Watch List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_On_Watch_List_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied/On Watch List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Latin__c</fullName>
        <label>Department (Latin)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Used to capture what division of the publisher the contact falls within</description>
        <inlineHelpText>Used to capture what division of the publisher the contact falls within</inlineHelpText>
        <label>Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duplicate_of_Contact__c</fullName>
        <formula>Kept_Contact_Name__r.Siebel_Contact_Id__c</formula>
        <label>Duplicate of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Prohibited__c</fullName>
        <formula>IF ( Export_Prohibited_checkbox__c = TRUE, 
IMAGE ( &quot;/img/msg_icons/error32.png&quot;, &quot;True Image&quot; ), &quot;&quot;
)</formula>
        <label>Export Prohibited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Prohibited_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Prohibited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_of_Study__c</fullName>
        <label>Field of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Field_of_Study</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name_Latin__c</fullName>
        <label>First Name (Latin)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greeting__c</fullName>
        <label>Greeting</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Licenses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Licenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Comes from EBC. need to determine how this will be fetched.</inlineHelpText>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Individual_Account__c</fullName>
        <description>Used by CDS integration</description>
        <formula>Account.Is_Individual_Account__c</formula>
        <label>Is Individual Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Self-Defined Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use the software</fullName>
                </value>
                <value>
                    <fullName>Manage teams using the software</fullName>
                </value>
                <value>
                    <fullName>Provide IT/licensing support</fullName>
                </value>
                <value>
                    <fullName>Purchase the software for others</fullName>
                </value>
                <value>
                    <fullName>Educator, Researcher (College, University)</fullName>
                </value>
                <value>
                    <fullName>Educator (K-12, Pre-College)</fullName>
                </value>
                <value>
                    <fullName>Software Admin (College, University)</fullName>
                </value>
                <value>
                    <fullName>Software Admin (K-12, Pre-College)</fullName>
                </value>
                <value>
                    <fullName>Postdoctoral</fullName>
                </value>
                <value>
                    <fullName>Student (Graduate-level)</fullName>
                </value>
                <value>
                    <fullName>Student (Undergraduate)</fullName>
                </value>
                <value>
                    <fullName>Student (K-12, Pre-College)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title_Latin__c</fullName>
        <label>Job Title (Latin)</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kept_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Active Contact Name</description>
        <label>Kept Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Duplicate Contacts</relationshipLabel>
        <relationshipName>Duplicate_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Contact Preferred Language</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name_Latin__c</fullName>
        <label>Last Name (Latin)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Service_Survey_Sent_Date__c</fullName>
        <description>Identifies when we sent the last Service Survey to a Contact</description>
        <label>Last Service Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latin_First_Name_Formula__c</fullName>
        <formula>CASE ( First_Name_Latin__c ,NULL,FirstName,First_Name_Latin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latin First Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latin_Last_Name_Formula__c</fullName>
        <formula>CASE( Last_Name_Latin__c,NULL,LastName,Last_Name_Latin__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latin Last Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Department__c</fullName>
        <description>This field captures the department field from the lead on conversion.  A workflow field update will take this value and populate it in the standard Department field on the contact object.  It should not be on the page layout</description>
        <label>Lead Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Stop_Latin__c</fullName>
        <label>Mail Stop (Latin)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Stop__c</fullName>
        <label>Mail Stop</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MathWorks_Account_ID__c</fullName>
        <label>MathWorks Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mathworks_Account_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MathWorks Account Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonFormattedMobilePhone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(    MobilePhone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;ext&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;),&quot;e&quot;, &quot;&quot;), &quot;x&quot;, &quot;&quot;)</formula>
        <label>NonFormattedMobilePhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonFormattedPhone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( 
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(    Phone , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;), &quot;+&quot;, &quot;&quot;), &quot;ext&quot;, &quot;&quot;), &quot;.&quot;, &quot;&quot;),&quot;e&quot;, &quot;&quot;), &quot;x&quot;, &quot;&quot;)</formula>
        <label>NonFormattedPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_All_Emails__c</fullName>
        <description>Field used for sync to Eloqua, represents preference on email communication</description>
        <label>Opt-Out: All Emails</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPTOUT</fullName>
                </value>
                <value>
                    <fullName>OPTIN</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Optional_Data_Missing__c</fullName>
        <formula>IF(
    OR
    (
      ISPICKVAL ( MailingCountryCode , &quot;CN&quot;), 
      ISPICKVAL(MailingCountryCode, &quot;JP&quot;), 
      ISPICKVAL(MailingCountryCode, &quot;KR&quot;)
    )
,
(
    IF( ISBLANK( Title ) , &quot; Job Title&quot;, &quot;&quot;) + 
    IF( ISBLANK( Department ) , &quot; Department&quot;, &quot;&quot;) + 
    IF( AND(ISBLANK(Phone),ISBLANK(MobilePhone)), &quot; Phone&quot;, &quot;&quot;) +
    IF( ISBLANK( First_Name_Latin__c ) , &quot; First Name (Latin)&quot;, &quot;&quot;) +
    IF( ISBLANK( Last_Name_Latin__c ) , &quot; Last Name (Latin)&quot;, &quot;&quot;) +
    IF( ISBLANK( Job_Title_Latin__c ) , &quot; Job Title (Latin)&quot;, &quot;&quot;) +
    IF( ISBLANK( Department_Latin__c ) , &quot; Department (Latin)&quot;, &quot;&quot;) +
    IF( ISBLANK( City_Latin__c ) , &quot; City (Latin)&quot;, &quot;&quot;)
),IF( ISBLANK( Title ) , &quot; Job Title&quot;, &quot;&quot;) + 
    IF( ISBLANK( Department ) , &quot; Department&quot;, &quot;&quot;) + 
    IF( AND(ISBLANK(Phone),ISBLANK(MobilePhone)), &quot; Phone&quot;, &quot;&quot;))</formula>
        <label>Optional Data Missing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Not_Authenticated__c</fullName>
        <label>Reason Not Authenticated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown university</fullName>
                </value>
                <value>
                    <fullName>Illegible/incomplete form</fullName>
                </value>
                <value>
                    <fullName>Expired or no date on form</fullName>
                </value>
                <value>
                    <fullName>Multiple Reasons</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Completeness_Percent__c</fullName>
        <formula>IF(
                  OR(
                                   ISPICKVAL ( MailingCountryCode , &quot;CN&quot;), 
                                   ISPICKVAL(MailingCountryCode, &quot;JP&quot;), 
                                   ISPICKVAL(MailingCountryCode, &quot;KR&quot;)
                                   )
,
(
(
   IF( ISBLANK( First_Name_Latin__c ) , 0, 1) + 
   IF( ISBLANK( Last_Name_Latin__c ) , 0, 1) +  
   IF( ISBLANK( Job_Title_Latin__c ) , 0, 1) + 
   IF( ISBLANK( Department_Latin__c ) , 0, 1) + 
   IF( ISBLANK( City_Latin__c ) , 0, 1) + 
   IF( ISBLANK( Title ) , 0, 1) + 
   IF( ISBLANK( Department ) , 0, 1) +  
   IF( 
       AND(ISBLANK(Phone)
           ,ISBLANK(MobilePhone)), 0, 1)
   ) / 8)
,((IF( ISBLANK( Title ) , 0, 1) + 
IF( ISBLANK( Department ) , 0, 1) + IF( AND(ISBLANK(Phone),ISBLANK(MobilePhone)), 0, 1)) / 3))</formula>
        <label>Record Completeness %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Record_Completeness__c</fullName>
        <description>Display image if optional required fields are missing</description>
        <formula>CASE(Record_Completeness_Percent__c, 
1, &quot;&quot;,IMAGE ( &quot;/img/msg_icons/info32.png&quot;, &quot;True Image&quot; ))</formula>
        <inlineHelpText>This record has been saved without optional but important data, see the Optional Data Missing field for details. If available, add the missing data in order to improve the quality.</inlineHelpText>
        <label>Record Completeness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contact_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Defined_Sector__c</fullName>
        <label>Self-Defined Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Use</fullName>
                </value>
                <value>
                    <fullName>Government Use</fullName>
                </value>
                <value>
                    <fullName>Student Version</fullName>
                </value>
                <value>
                    <fullName>University Version</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Identified_Country__c</fullName>
        <description>Self Identified Country from the MWA Profile.</description>
        <label>Self Identified Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Contact_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Contact Id from Siebel</description>
        <externalId>true</externalId>
        <label>Siebel Contact ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source_Table__c</fullName>
        <description>Text formula field returning static value of “Contact”; not added to page layouts</description>
        <formula>&apos;Contact&apos;</formula>
        <label>Source Table</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_Latin__c</fullName>
        <label>State/Province (Latin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Latin__c</fullName>
        <label>Street (Latin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_School_Name__c</fullName>
        <label>Student School Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Profile_Status__c</fullName>
        <label>Web Profile Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABANDONED</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>CLOSED</fullName>
                </value>
                <value>
                    <fullName>INCOMPLETE</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>UNCONFIRMED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isAccount_Changed__c</fullName>
        <description>Checkbox formula field returning whether the Account has changed during the last DML operation as determined by the following: 
	if the transaction was an insert, return true
if the transaction was an update, check if the Account Changed Date/Time = Last Modified Date Time, if 	yes then return true, else return false;
not added to page layouts</description>
        <formula>AND(
    IF(
        LastModifiedDate-Account_Changed_Date__c &lt;=  $Setup.General_Settings__c.CDS_IsChanged_Interval__c 
        ,true
        ,false
    )
    ,NOT(Is_Individual_Account__c)
    ,NOT(ISBLANK(AccountId))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isAccount Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAddress_Changed__c</fullName>
        <description>Checkbox formula field returning whether the address has changed during the last DML operation as determined by the following: 
	if the transaction was an insert, return true
	if the transaction was an update, check if the Address 			Changed Date/Time = Last Modified Date Time, if 	yes then return true, else return false;
not added to page layouts</description>
        <formula>IF(LastModifiedDate-Address_Changed_Date__c &lt;=  $Setup.General_Settings__c.CDS_IsChanged_Interval__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isAddress Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_e2a__Thread_Id__c</fullName>
        <formula>&quot;ref:&quot;&amp;
LEFT( $Organization.Id , 4 )&amp;
IF( BEGINS(RIGHT($Organization.Id,11), &apos;0000000&apos;), RIGHT($Organization.Id,4),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;000000&apos;), RIGHT($Organization.Id,5),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;00000&apos;), RIGHT($Organization.Id,6),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;0000&apos;), RIGHT($Organization.Id,7),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;000&apos;), RIGHT($Organization.Id,8),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;00&apos;), RIGHT($Organization.Id,9),
IF( BEGINS(RIGHT($Organization.Id,11), &apos;0&apos;), RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11)
)))))))
&amp;&quot;.&quot;&amp;LEFT( Id , 4 )&amp;

IF(BEGINS(RIGHT(Id,11), &apos;0000000&apos;), RIGHT(Id,4),
IF(BEGINS(RIGHT(Id,11), &apos;000000&apos;), RIGHT(Id,5),
IF(BEGINS(RIGHT(Id,11), &apos;00000&apos;), RIGHT(Id,6),
IF(BEGINS(RIGHT(Id,11), &apos;0000&apos;), RIGHT(Id,7),
IF(BEGINS(RIGHT(Id,11), &apos;000&apos;), RIGHT(Id,8),
IF(BEGINS(RIGHT(Id,11), &apos;00&apos;), RIGHT(Id,9),
IF(BEGINS(RIGHT(Id,11), &apos;0&apos;), RIGHT(Id,10),
RIGHT(Id,11)
))))))) &amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Contact_Status__c</columns>
        <columns>First_Name_Latin__c</columns>
        <columns>Last_Name_Latin__c</columns>
        <columns>Contact_Role__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Change_Disable_Merge_to_Dup</fullName>
        <active>true</active>
        <description>Cannot change to Dup if DisableMerge flag is ON</description>
        <errorConditionFormula>AND( NOT( ISBLANK( Kept_Contact_Name__c ) ) , Disable_Merge__c = True)</errorConditionFormula>
        <errorDisplayField>Kept_Contact_Name__c</errorDisplayField>
        <errorMessage>You cannot change status to Duplicate if Disable Merge flag is ON</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Change_Status_to_Duplicate</fullName>
        <active>true</active>
        <description>Users cannot manulay change status to Duplicate, only when Kept Contact name has been populated</description>
        <errorConditionFormula>AND ( ISCHANGED( Contact_Status__c) , ISPICKVAL( Contact_Status__c , &quot;Duplicate&quot;), ISBLANK( Kept_Contact_Name__c ))</errorConditionFormula>
        <errorDisplayField>Contact_Status__c</errorDisplayField>
        <errorMessage>To change contact status to Duplicate you must enter the value of Kept Contact Name</errorMessage>
    </validationRules>
</CustomObject>